# sockets

./: CMakeLists.txt  TODO.txt
include/: client.h  command_processor.h  communicator.h  container.h  container.ipp  entity_processor.h  file.h  file_change_event.h  file_change_event.ipp  file_observer.h  google  header_factory.h  server.h
include/comms/: client.h  communicator.h  entity.pb.h  header.pb.h  header_factory.h  header_processor.h  server.h  shared_message.h  socket_common.h
libs/: libabsl_log_internal_check_op.dylib  libabsl_log_internal_message.dylib  libabsl_log_internal_proto.dylib  libprotobuf-lite.dylib
proto/: dir_descriptor.pb.cc  dir_descriptor.pb.h  dir_descriptor.proto  entity.pb.cc  entity.pb.h  generate_messages.sh  header.pb.cc  header.pb.h  header.proto  person.pb.cc  person.pb.h  person.proto
proto/comms/: entity.proto  header.proto
src/: client.cc  client.cpp  client_main.cc  client_main.cpp  command_processor.cc  communicator.cc  entity_processor.cc  file.cc  file_change_event.cc  file_observer.cc  header_factory.cpp  server.cc  server.cpp  server_main.cc  server_main.cpp  test.cc  test.cpp
src/comms/: client.cc  communicator.cc  entity.pb.cc  header.pb.cc  header_factory.cc  server.cc  shared_message.cc
test/: command_processor.cc  server_main.cc  test.cc
testdir/: file1.txt  file2.txt  file3.txt
